--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
