--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "axios": "^0.21.1",
     "cookie": "^0.4.1",
+    "eventemitter3": "^4.0.7",
     "jsonwebtoken": "^8.5.1",
     "next": "^11.1.0",
     "react": "^17.0.2",
